@@ -1,45 +1,20 @@
 package tcintegrations.data.loot;
 
-import com.google.common.collect.ImmutableList;
-
-import com.mojang.datafixers.util.Pair;
-
-import java.util.function.BiConsumer;
-import java.util.function.Consumer;
-import java.util.function.Supplier;
+import java.util.Set;
 import java.util.List;
-import java.util.Map;
 
-import net.minecraft.data.DataGenerator;
+import net.minecraft.data.PackOutput;
 import net.minecraft.data.loot.LootTableProvider;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.level.storage.loot.LootTable;
-import net.minecraft.world.level.storage.loot.LootTables;
-import net.minecraft.world.level.storage.loot.ValidationContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 
-public class ModLootTables extends LootTableProvider {
+public class ModLootTables {
 
-    public ModLootTables(DataGenerator dataGeneratorIn) {
-        super(dataGeneratorIn);
-    }
-
-    @Override
-    public String getName() {
-        return "Tinkers' Integrations - Loot Tables";
-    }
-
-    @Override
-    protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables() {
-        return ImmutableList.of(
-            Pair.of(ModBlockLootTables::new, LootContextParamSets.BLOCK)
+    public static LootTableProvider create (PackOutput packOutput) {
+        return new LootTableProvider(
+            packOutput,
+            Set.of(),
+            List.of(new LootTableProvider.SubProviderEntry(ModBlockLootTables::new, LootContextParamSets.BLOCK))
         );
-    }
-
-    @Override
-    protected void validate(Map<ResourceLocation, LootTable> map, ValidationContext validationtracker) {
-        map.forEach((id, table) -> LootTables.validate(validationtracker, id, table));
     }
 
 }
